# adapter-kritor

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  bug_report.yml  feature.md
src/nonebot/adapters/kritor/: __init__.py  adapter.py  bot.py  config.py  event.py  exception.py  message.py  model.py  permission.py
src/nonebot/adapters/kritor/protos/kritor/authentication/: __init__.py
src/nonebot/adapters/kritor/protos/kritor/common/: __init__.py
src/nonebot/adapters/kritor/protos/kritor/core/: __init__.py
src/nonebot/adapters/kritor/protos/kritor/customization/: __init__.py
src/nonebot/adapters/kritor/protos/kritor/developer/: __init__.py
src/nonebot/adapters/kritor/protos/kritor/event/: __init__.py
src/nonebot/adapters/kritor/protos/kritor/file/: __init__.py
src/nonebot/adapters/kritor/protos/kritor/friend/: __init__.py
src/nonebot/adapters/kritor/protos/kritor/group/: __init__.py
src/nonebot/adapters/kritor/protos/kritor/guild/: __init__.py
src/nonebot/adapters/kritor/protos/kritor/message/: __init__.py
src/nonebot/adapters/kritor/protos/kritor/process/: __init__.py
src/nonebot/adapters/kritor/protos/kritor/reverse/: __init__.py
src/nonebot/adapters/kritor/protos/kritor/web/: __init__.py
src/nonebot_adapter_kritor/: adapter.py  bot.py  config.py  event.py  exception.py  message.py  model.py  utils.py
src/nonebot_adapter_kritor/protos/kritor/authentication/: __init__.py
src/nonebot_adapter_kritor/protos/kritor/common/: __init__.py
src/nonebot_adapter_kritor/protos/kritor/core/: __init__.py
src/nonebot_adapter_kritor/protos/kritor/customization/: __init__.py
src/nonebot_adapter_kritor/protos/kritor/developer/: __init__.py
src/nonebot_adapter_kritor/protos/kritor/event/: __init__.py
src/nonebot_adapter_kritor/protos/kritor/file/: __init__.py
src/nonebot_adapter_kritor/protos/kritor/friend/: __init__.py
src/nonebot_adapter_kritor/protos/kritor/group/: __init__.py
src/nonebot_adapter_kritor/protos/kritor/guild/: __init__.py
src/nonebot_adapter_kritor/protos/kritor/message/: __init__.py
src/nonebot_adapter_kritor/protos/kritor/reverse/: __init__.py
src/nonebot_adapter_kritor/protos/kritor/web/: __init__.py
