[project]
name = "nonebot-adapter-kritor"
version = "0.1.0"
description = "Nonebot Adapter for Kritor Protocol"
authors = [
    {name = "rf_tar_railt", email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "betterproto>=2.0.0b6",
    "nonebot2>=2.2.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "T201", "E731", "E402"]

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "betterproto[compiler]>=2.0.0b6",
    "black>=24.3.0",
    "isort>=5.13.2",
    "ruff>=0.3.4",
    "grpcio-tools>=1.62.1",
]

[tool.pdm.build]
includes = ["src/nonebot_adapter_kritor"]

[tool.pdm.scripts]
format = { composite = ["isort ./src/nonebot_adapter_kritor/ ./tests/","black ./src/nonebot_adapter_kritor/ ./tests/","ruff check ./src/nonebot_adapter_kritor/ ./tests/"] }
compile = "grpc_tools.protoc -I ./src/kritor/protos --python_betterproto_out=./src/nonebot_adapter_kritor/protos ./common/*.proto ./core/core.proto ./customization/customization.proto ./developer/*.proto ./event/*.proto ./file/*.proto ./friend/*.proto ./group/*.proto ./guild/*.proto ./message/message.proto ./reverse/reverse.proto ./web/web.proto"