[project]
name = "nonebot-adapter-kritor"
version = "0.1.0"
description = "Nonebot Adapter for Kritor Protocol"
authors = [
    {name = "rf_tar_railt", email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "betterproto>=2.0.0b6",
    "nonebot2>=2.2.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = ["src/nonebot/adapter/kritor/protos/"]

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "T201", "E731", "E402", "E501"]

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "betterproto[compiler]>=2.0.0b6",
    "black>=24.3.0",
    "isort>=5.13.2",
    "ruff>=0.3.4",
    "grpcio-tools>=1.62.1",
]

[tool.pdm.build]
includes = ["src/nonebot"]

[tool.pdm.scripts]
format = { composite = ["isort ./src/nonebot/adapter/kritor/ ./tests/","black ./src/nonebot/adapter/kritor/ ./tests/","ruff check ./src/nonebot/adapter/kritor/ ./tests/"] }
compile = "python -m grpc_tools.protoc -I ./src/kritor/protos --python_betterproto_out=./src/nonebot/adapter/kritor/protos ./src/kritor/protos/auth/*.proto ./src/kritor/protos/common/*.proto ./src/kritor/protos/core/core.proto ./src/kritor/protos/customization/customization.proto ./src/kritor/protos/developer/*.proto ./src/kritor/protos/event/*.proto ./src/kritor/protos/file/*.proto ./src/kritor/protos/friend/*.proto ./src/kritor/protos/group/*.proto ./src/kritor/protos/guild/*.proto ./src/kritor/protos/message/message.proto ./src/kritor/protos/reverse/reverse.proto ./src/kritor/protos/web/web.proto"